--- a/category/card/style_cart.css
+++ b/category/card/style_cart.css
@@ -1,8 +1,6 @@
+/* Ваш стиль CSS для корзини тут */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
-    margin: 0;
-    padding: 0;
 }
 
 header {
@@ -43,49 +41,7 @@ nav a:hover {
     text-decoration: underline;
 }
 
-#product-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    margin: 20px;
-}
-
-.product {
-    flex: 1;
-    max-width: 300px;
-    margin: 20px;
-    padding: 20px;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    text-align: center;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.product img {
-    max-width: 100%;
-    height: auto;
-}
-
-.product h2 {
-    font-size: 24px;
-}
-
-.product p {
-    font-size: 16px;
-}
-
 #cart {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    margin: 20px;
-}
-
-.cart-items {
-    display: flex;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
